# template-web-django

./: README.md  pyproject.toml
config/: settings.py
